  * For koffice-libs, added a version to Conflicts: koffice and
    Replaces: koffice; removed Depends: debconf.
  * For koffice-dev, replaced >= with = in Depends: koffice-libs.
  * Replaced individual application recommendations in koshell with a
    single Recommends: koffice.
  * Upgraded debian/rules to DH_COMPAT=3 and removed postinst scripts;
    completely reworked debian/rules.
  * Moved a few files in /usr/share/services from package koffice-libs to
    individual application packages.
  * Made links so killustrator icons show up beneath /usr/share/icons/.
  * Registered kword as capable of handling mime type application/x-abiword.
  * Added versioning to libraries in /usr/lib/.
  * Added various man pages.
  * Added icons to the debian menu items.
  * Changed the hint for the KWord debian menu item from "Word processors"
    to "WordProcessors" to match the hint for AbiWord.
  * Slightly altered which miscellaneous documentation files are installed.
  * Removed debconf-related files that are no longer used for koffice-libs.
  * Overhauled package descriptions.
  * Miscellaneous cleanups in debian.

 -- Ben Burton <benb@acm.org>  Fri,  6 Apr 2001 10:30:32 -0500

koffice (2.1-cvs20010323-1) unstable; urgency=low
 
  * New upstream CVS pull
  * Remove duplicate menu entry (Closes: #90298)
  * Minor build fixes
  * Change Maintainer to Debian QA
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Fri, 23 Mar 2001 02:30:00 -0700

koffice (2.1-cvs20010308-1) unstable; urgency=low
 
  * New upstream CVS pull
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Thu, 08 Mar 2001 09:40:00 -0700

koffice (2.1-cvs20010219-1) unstable; urgency=low
 
  * New upstream version
  * Upping standards version
  * Applying debconf i18n patch (Closes: #84263)
  * Changing section for kspread (Closes: #85892)
  * Fixes grid color (Closes: #76651)
  * Adding in dependency for debconf
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Mon, 19 Feb 2001 06:00:00 -0700
