@@ -1,0 +1,2 @@
+kchart 0 kchart
+libkchartpart 0 kchart
