@@ -1,1 +1,5 @@
-# modules
+# There is no -dev package.
+kivio: non-dev-pkg-with-shlib-symlink usr/lib/kivio.so.0.0.0 usr/lib/kivio.so
+kivio: non-dev-pkg-with-shlib-symlink usr/lib/libkiviopart.so.0.0.0 usr/lib/libkiviopart.so
+# This is inserted by debhelper and is legal.
+kivio: postrm-calls-ldconfig
