@@ -1,0 +1,6 @@
+kivio 0 kivio
+libkiviopart 0 kivio
+libkivioconnectortool 0 kivio
+libkivioselecttool 0 kivio
+libkiviotexttool 0 kivio
+libkiviozoomtool 0 kivio
