@@ -1,0 +1,11 @@
+libkformula 3 koffice-libs (>= 1:1.1-20010404-1)
+libkformula2 3 koffice-libs (>= 1:1.1-20010404-1)
+libkochart 1 koffice-libs (>= 1:1.1-20010404-1)
+libkodocinfopropspage 0 koffice-libs (>= 1:1.1-20010404-1)
+libkofficecore 1 koffice-libs (>= 1:1.1-20010404-1)
+libkofficeui 1 koffice-libs (>= 1:1.1-20010404-1)
+libkoml 1 koffice-libs (>= 1:1.1-20010404-1)
+libkoscript 1 koffice-libs (>= 1:1.1-20010404-1)
+libkstore 1 koffice-libs (>= 1:1.1-20010404-1)
+libkwmf 0 koffice-libs (>= 1:1.1-20010404-1)
+libqt3stuff 0 koffice-libs (>= 1:1.1-20010404-1)
