@@ -1,0 +1,2 @@
+kpresenter 0 kpresenter
+libkpresenterpart 0 kpresenter
