@@ -2,10 +2,14 @@ usr/bin/kspread
 usr/lib/kspread.*
 usr/lib/libkspreadpart.*
 usr/lib/kde2/libkspreadcalc.*
+usr/lib/kde2/libcsvexport.*
+usr/lib/kde2/libcsvimport.*
 usr/share/applnk/Office/kspread.desktop
 usr/share/apps/kspread/*
 usr/share/mimelnk/application/x-kspread.desktop
 usr/share/services/kspreadcalc.desktop
+usr/share/services/kspread_csv_export.desktop
+usr/share/services/kspread_csv_import.desktop
 usr/share/icons/locolor/16x16/apps/kspread.png
 usr/share/icons/locolor/32x32/apps/kspread.png
 usr/share/icons/hicolor/32x32/apps/kspread.png
