@@ -1,0 +1,2 @@
+kspread 0 kspread
+libkspreadpart 0 kspread
