@@ -1,0 +1,2 @@
+kword 0 kword
+libkwordpart 0 kword
